@@ -21,8 +21,9 @@ public class Kata1 {
         List<Movie> movies = DataUtil.getMovies();
 
         return movies.stream()
-                .map(movie -> Map.of("id", movie.getId(), "title", movie.getTitle()))
+                .map(movie -> ImmutableMap.of("id", movie.getId(), "title", movie.getTitle()))
                 .collect(Collectors.toList());
+
 //        return ImmutableList.of(ImmutableMap.of("id", 5, "title", "Bad Boys"));
     }
 }
